--- a/exercise_3/presentation/presentation_ex3.tex
+++ b/exercise_3/presentation/presentation_ex3.tex
@@ -70,12 +70,20 @@
         \end{subfigure}
         \begin{subfigure}[c]{0.45\textwidth}
             \centering
-            \includegraphics[width=1\textwidth]{exercise_3/paper/images/FANHL.JPG}
+            \includegraphics[width=0.9\textwidth]{exercise_3/paper/images/FANHL.JPG}
             \caption{A face from AKDEF}
             \label{fig:AKDEF_face}
         \end{subfigure}
         \caption{}
         \label{fig:faces}
     \end{figure}
+\end{frame}
+\begin{frame}[fragile]{Evaluation}
+\begin{itemize}
+    \item Accuracy of Azure on labeled data roughly $0.76$
+    \item Training set: up to $13961$
+    \item Test set: $4654$
+    \item 
+\end{itemize}
 \end{frame}
 \end{document}
