Updates from Overleaf

--- a/exercise_3/paper/literature.bib
+++ b/exercise_3/paper/literature.bib
@@ -17,3 +17,21 @@
   howpublished = {\url{https://www.kdef.se/}},
   note = {Accessed: 2021-02-19}
 }
+
+@misc{dogs-cats,
+  title = {Kaggle Competition: Dogs vs. Cats},
+  howpublished = {\url{https://www.kaggle.com/c/dogs-vs-cats/data}},
+  note = {Accessed: 2021-02-19}
+}
+
+@misc{cats,
+  title = {KDEF \& AKDEF},
+  howpublished = {\url{https://www.kdef.se/}},
+  note = {Accessed: 2021-02-19}
+}
+
+@misc{dogs,
+  title = {KDEF \& AKDEF},
+  howpublished = {\url{https://www.kdef.se/}},
+  note = {Accessed: 2021-02-19}
+}
