--- a/exercise_3/presentation/presentation_ex3.tex
+++ b/exercise_3/presentation/presentation_ex3.tex
@@ -81,9 +81,24 @@
 \begin{frame}[fragile]{Evaluation}
 \begin{itemize}
     \item Accuracy of Azure on labeled data roughly $0.76$
-    \item Training set: up to $13961$
+    \item attack set: starting with $2000$ up to $13961$
     \item Test set: $4654$
-    \item 
 \end{itemize}
+\end{frame}
+\begin{frame}[fragile]{Evaluation}
+           \begin{figure}[h!]
+                    \centering      \includegraphics[scale=0.8]{exercise_3/paper/images/accuracy_copy_Azure.png}
+                    \caption{Accuracy of the copied network}
+                    \label{fig:Ac_Azure}
+            \end{figure}
+        
+\end{frame}
+\begin{frame}[fragile]{Evaluation}
+           \begin{figure}[h!]
+                    \centering      \includegraphics[scale=0.8]{exercise_3/paper/images/equality_copy_Azure.png}
+                    \caption{percentage of images labeled the same}
+                    \label{fig:Eq_AZure}
+            \end{figure}
+        
 \end{frame}
 \end{document}
